examples/gateway/gateway-nodeport.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: projectsesame
---
kind: GatewayClass
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: sample-gatewayclass
spec:
  controllerName: projectsesame.io/sample-controller
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: sesame
  namespace: projectsesame
spec:
  gatewayClassName: sample-gatewayclass
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
